k3s/k3s-trusted/workloads/servarr/prowlarr/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: data
          mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: prowlarr-data
