k3s/k3s-trusted/workloads/servarr/prowlarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 9696
    targetPort: 9696
