k3s/k3s-trusted/workloads/servarr/prowlarr/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.home.balzers.xyz`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
      middlewares:
        - name: default-headers
  tls:
    secretName: home-balzers-xyz-tls
